Small improvement in tomcat client